--- a/SAF.Servicio.HostSoap/Web.config
+++ b/SAF.Servicio.HostSoap/Web.config
@@ -11,7 +11,7 @@
 
   <connectionStrings>
     <!--<add name="SI_SOCAUDEntities" connectionString="metadata=res://*/SAFModel.csdl|res://*/SAFModel.ssdl|res://*/SAFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SI_SOCAUD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="SI_SOCAUDEntities" connectionString="metadata=res://*/SAFModel.csdl|res://*/SAFModel.ssdl|res://*/SAFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SI_SOCAUD;Uid=sa;Pwd=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SI_SOCAUDEntities" connectionString="metadata=res://*/SAFModel.csdl|res://*/SAFModel.ssdl|res://*/SAFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.20.3.234;initial catalog=SI_SOCAUD;Uid=sa;Pwd=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
   <system.serviceModel>
