--- a/SAF.Entidad/App.Config
+++ b/SAF.Entidad/App.Config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="SI_SOCAUDEntities" connectionString="metadata=res://*/SAFModel.csdl|res://*/SAFModel.ssdl|res://*/SAFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SI_SOCAUD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="SI_SOCAUDEntities" connectionString="metadata=res://*/SAFModel.csdl|res://*/SAFModel.ssdl|res://*/SAFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SI_SOCAUD;Uid=sa;Pwd=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SI_SOCAUDEntities" connectionString="metadata=res://*/SAFModel.csdl|res://*/SAFModel.ssdl|res://*/SAFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.20.3.234;initial catalog=SI_SOCAUD;Uid=sa;Pwd=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
