cambios en solicitud

--- a/SAF.Web.Intranet/Web.config
+++ b/SAF.Web.Intranet/Web.config
@@ -20,7 +20,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
     <!-- Ruta Archivo -->
-    <add key="RutaArchivo" value="C:\Users\61346\Source\Repos\SAF_Repository\SAF.Web.Intranet\Archivos" />
+    <add key="RutaArchivo" value="D:\ArchivosSAF" />
     <add key="MaxTamanioPorArchivo" value="10240"/>
     
   </appSettings>
