--- a/SAF.Web/Web.config
+++ b/SAF.Web/Web.config
@@ -89,7 +89,7 @@
     </client>
   </system.serviceModel>
   <connectionStrings>
-    <add name="ModeloExtranet" connectionString="metadata=res://*/modeloExtranet.csdl|res://*/modeloExtranet.ssdl|res://*/modeloExtranet.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SI_SOCAUD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="ModeloExtranet" connectionString="metadata=res://*/modeloExtranet.csdl|res://*/modeloExtranet.ssdl|res://*/modeloExtranet.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.20.3.234;initial catalog=SI_SOCAUD;Uid=sa;Pwd=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="ModeloExtranet" connectionString="metadata=res://*/modeloExtranet.csdl|res://*/modeloExtranet.ssdl|res://*/modeloExtranet.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SI_SOCAUD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="ModeloExtranet" connectionString="metadata=res://*/modeloExtranet.csdl|res://*/modeloExtranet.ssdl|res://*/modeloExtranet.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.20.3.234;initial catalog=SI_SOCAUD;Uid=sa;Pwd=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
