--- a/SAF.Web.Intranet/SAF.Web.Intranet.csproj
+++ b/SAF.Web.Intranet/SAF.Web.Intranet.csproj
@@ -174,6 +174,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helper\Archivo.cs" />
+    <Compile Include="Helper\NotificacionAdmin.cs" />
     <Compile Include="modeloIntranet.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -321,6 +322,9 @@
       <DependentUpon>modeloIntranet.tt</DependentUpon>
     </Compile>
     <Compile Include="SP_ACCEDERSISTEMAADMIN_Result.cs">
+      <DependentUpon>modeloIntranet.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SP_SAF_ASIGNARGANADORPROPUESTA_Result.cs">
       <DependentUpon>modeloIntranet.tt</DependentUpon>
     </Compile>
     <Compile Include="SP_SAF_PROPUESTAS_Result.cs">
