--- a/SAF.Web/SAF.Web.csproj
+++ b/SAF.Web/SAF.Web.csproj
@@ -618,13 +618,13 @@
     <Content Include="Views\Propuesta\VerPropuesta.cshtml" />
     <Content Include="Views\Propuesta\_AsignarFechaEquipo.cshtml" />
     <Content Include="Views\BandejaInvitaciones\Index.cshtml" />
+    <Content Include="Views\Notificacion\Bandeja.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Archivos\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\General\" />
-    <Folder Include="Views\Notificacion\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
