--- a/SAF.Web/Web.config
+++ b/SAF.Web/Web.config
@@ -76,16 +76,33 @@
       </wsHttpBinding>
     </bindings>
     <client>
+      
       <endpoint address="http://localhost:33694/ServicioGestionSoaAuditor.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IGestionSociedadAuditorLogic" contract="ProxyServicioGestionSoaAuditor.IGestionSociedadAuditorLogic" name="WSHttpBinding_IGestionSociedadAuditorLogic">
         <identity>
           <userPrincipalName value="LuisCordova-PC\LuisCordova" />
         </identity>
       </endpoint>
+      
       <endpoint address="http://localhost:33694/ServicioSeguridad.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ISeguridadLogic" contract="ProxyServicioSeguridad.ISeguridadLogic" name="WSHttpBinding_ISeguridadLogic">
         <identity>
           <userPrincipalName value="LuisCordova-PC\LuisCordova" />
         </identity>
       </endpoint>
+      
+
+      <!--<endpoint address="http://ec2-52-23-157-155.compute-1.amazonaws.com/ServicioSOAP/ServicioGestionSoaAuditor.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IGestionSociedadAuditorLogic" contract="ProxyServicioGestionSoaAuditor.IGestionSociedadAuditorLogic" name="WSHttpBinding_IGestionSociedadAuditorLogic">
+        <identity>
+          <userPrincipalName value="LuisCordova-PC\LuisCordova" />
+        </identity>
+      </endpoint>
+
+      <endpoint address="http://ec2-52-23-157-155.compute-1.amazonaws.com/ServicioSOAP/ServicioSeguridad.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ISeguridadLogic" contract="ProxyServicioSeguridad.ISeguridadLogic" name="WSHttpBinding_ISeguridadLogic">
+        <identity>
+          <userPrincipalName value="LuisCordova-PC\LuisCordova" />
+        </identity>
+      </endpoint>-->
+      
+      
     </client>
   </system.serviceModel>
   <connectionStrings>
