--- a/SAF.AgenteServicios/app.config
+++ b/SAF.AgenteServicios/app.config
@@ -10,6 +10,8 @@
             </wsHttpBinding>
         </bindings>
         <client>
+          
+            
             <endpoint address="http://localhost:33694/ServicioSeguridad.svc"
                 binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ISeguridadLogic"
                 contract="ProxyServicioSeguridad.ISeguridadLogic" name="WSHttpBinding_ISeguridadLogic">
@@ -41,6 +43,42 @@
                     <userPrincipalName value="61226@contraloria.gob.pe" />
                 </identity>
             </endpoint>
+          <!--
+
+          <endpoint address="http://ec2-52-23-157-155.compute-1.amazonaws.com/ServicioSOAP/ServicioSeguridad.svc"
+              binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ISeguridadLogic"
+              contract="ProxyServicioSeguridad.ISeguridadLogic" name="WSHttpBinding_ISeguridadLogic">
+            <identity>
+              <userPrincipalName value="61226@contraloria.gob.pe" />
+            </identity>
+          </endpoint>
+          <endpoint address="http://ec2-52-23-157-155.compute-1.amazonaws.com/ServicioSOAP/ServicioPropuestaAuditoria.svc"
+              binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPropuestaAuditoriaLogic"
+              contract="ProxyServicioPropuestaAuditoria.IPropuestaAuditoriaLogic"
+              name="WSHttpBinding_IPropuestaAuditoriaLogic">
+            <identity>
+              <userPrincipalName value="61226@contraloria.gob.pe" />
+            </identity>
+          </endpoint>
+          <endpoint address="http://ec2-52-23-157-155.compute-1.amazonaws.com/ServicioSOAP/ServicioGestionSoaAuditor.svc"
+              binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IGestionSociedadAuditorLogic"
+              contract="ProxyServicioGestionSoaAuditor.IGestionSociedadAuditorLogic"
+              name="WSHttpBinding_IGestionSociedadAuditorLogic">
+            <identity>
+              <userPrincipalName value="61226@contraloria.gob.pe" />
+            </identity>
+          </endpoint>
+          <endpoint address="http://ec2-52-23-157-155.compute-1.amazonaws.com/ServicioSOAP/ServicioConcursoPublicoMerito.svc"
+              binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IConcursoPublicoMeritoLogic"
+              contract="ProxyServicioConcursoPublicoMerito.IConcursoPublicoMeritoLogic"
+              name="WSHttpBinding_IConcursoPublicoMeritoLogic">
+            <identity>
+              <userPrincipalName value="61226@contraloria.gob.pe" />
+            </identity>
+          </endpoint>
+
+            -->
+          
         </client>
     </system.serviceModel>
 </configuration>
