notificacion y asistencia movil

--- a/SAF.DTO/SAF.DTO.csproj
+++ b/SAF.DTO/SAF.DTO.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CronoEntidadDTO.cs" />
     <Compile Include="CronogramaDTO.cs" />
     <Compile Include="InvitacionViewDTO.cs" />
+    <Compile Include="NotificacionDTO.cs" />
     <Compile Include="PropuestaEjecucionDTO.cs" />
     <Compile Include="PublicacionDTO.cs" />
     <Compile Include="PublicacionViewDTO.cs" />
